--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>
-        </title>
+        <title>Tienda de Productos</title>
 
     </head>
     <body>
