--- a/contacto.html
+++ b/contacto.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>
-        </title>
+        <title>Tienda de Productos</title>
 
     </head>
     <body>
-
+        <header>
+            <h2>CONTACTO</h2>
+        </header>
     </body>
 
 </html>
