--- a/tienda.html
+++ b/tienda.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>
-        </title>
+       <title>Tienda de Productos</title>
 
     </head>
     <body>
+        <header>
+            <h2>TIENDA</h2>
+        </header>
+        Ordenadores
+        frigoríficos
+        libros de cocina
+        monitores
+        novelas
+        impresoras
+        cómics
+        tablets
+        microondas
+        tostadoras
+        televisores
+        freidoras
 
     </body>
 
