--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>
-        </title>
-
+        <title>Tienda de Productos</title>
     </head>
     <body>
+        <header>
+            <h2>BLOG</h2>
+        </header>
 
     </body>
 
