Subiendo los archivos con cabeceras

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Página web de tienda online">
+        <meta name="keywords" content="tienda online,Ordenadores, frigoríficos, libros de cocina, monitores, novelas, impresoras, cómics, tablets, microondas, tostadoras, televisores, freidoras">
+        <meta name="author" content="Ricardo Jurado">
+        <meta name="date" content="2025-05-14">
+        <meta http-equiv="Content-Language" content="es">
         <title>Tienda de Productos</title>
-
+        <style>
+            li{
+                display: inline;
+                padding: 10px;
+            }
+        </style>
     </head>
     <body>
-        <header>
+        <header style="text-align: center;">
             <h2>NOMBRE DE LA TIENDA</h2>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="quienes_somos.html">Quienes somos</a></li>
+                    <li><a href="contacto.html">Contacte con nosotros</a></li>
+                    <li><a href="blog.html">Nuestro Blog</a></li>
+                    <li><a href="tienda.html">La Tienda</a></li>
+                </ul>
+            </nav>
         </header>
     </body>
 
