--- a/tienda.html
+++ b/tienda.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Página web de tienda online">
+        <meta name="keywords" content="tienda online,Ordenadores, frigoríficos, libros de cocina, monitores, novelas, impresoras, cómics, tablets, microondas, tostadoras, televisores, freidoras">
+        <meta name="author" content="Ricardo Jurado">
+        <meta name="date" content="2025-05-14">
+        <meta http-equiv="Content-Language" content="es">
        <title>Tienda de Productos</title>
-
+        <style>
+            li{
+                display: inline;
+                padding: 10px;
+            }
+        </style>
     </head>
     <body>
         <header>
