Ya trabajando con la tienda

--- a/contacto.html
+++ b/contacto.html
@@ -17,8 +17,16 @@
         </style>
     </head>
     <body>
-        <header>
+        <header style="text-align: center;">
             <h2>CONTACTO</h2>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="quienes_somos.html">Quienes somos</a></li>
+                    <li><a href="blog.html">Nuestro Blog</a></li>
+                    <li><a href="tienda.html">La Tienda</a></li>
+                </ul>
+            </nav>
         </header>
     </body>
 
