--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,16 @@
         </style>
     </head>
     <body>
-        <header>
+        <header style="text-align: center;">
             <h2>BLOG</h2>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="quienes_somos.html">Quienes somos</a></li>
+                    <li><a href="contacto.html">Contacte con nosotros</a></li>
+                    <li><a href="tienda.html">La Tienda</a></li>
+                </ul>
+            </nav>
         </header>
 
     </body>
