Update index.html desde github

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                 </ul>
             </nav>
         </header>
+        <section>
+            <header>
+                <h2>Seccion desde github</h2>
+            </header>
+            <article>
+                <p>
+                    Un nuevo parrafo creado desde github
+                </p>
+            </article>
+        </section>
     </body>
 
 </html>
