--- a/contacto.html
+++ b/contacto.html
@@ -13,6 +13,7 @@
             li{
                 display: inline;
                 padding: 10px;
+                backgrond-color:red;
             }
         </style>
     </head>
