--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
             li{
                 display: inline;
                 padding: 10px;
-                backgrond-color:red;
+                background-color:red;
             }
         </style>
     </head>
